<?xml version="1.0"?>
<package>
  <name>iiwa_robot_model</name>
  <version>0.0.0</version>
  <description>The iiwa robot model package</description>

  <maintainer email="mishlee@stanford.edu">Michelle Lee</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>